start recommendation views

--- a/KamleonApp/app/src/main/res/layout/activity_graphics.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_graphics.xml
@@ -55,16 +55,17 @@
             android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/rcvListNew"/>
+        android:id="@+id/rcvListNew"/>-->
 
     <androidx.compose.ui.platform.ComposeView
         android:layout_width="0dp"
@@ -74,6 +75,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+<!--    app:layout_constraintTop_toBottomOf="@+id/graphViewNew"-->
+
 
     <com.dynatech2012.kamleonuserapp.views.chart.KamleonGraphView
         android:layout_width="match_parent"
@@ -81,7 +84,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
-        app:layout_constraintBottom_toTopOf="@+id/rcvListNew"
+        app:layout_constraintBottom_toTopOf="@+id/cv_graph_tips"
         android:id="@+id/graphViewNew"/>
 
 
