--- a/KamleonApp/app/src/main/res/layout/activity_home.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_home.xml
@@ -151,13 +151,12 @@
             app:layout_constraintTop_toBottomOf="@id/homeProgressBar" />-->
         <androidx.compose.ui.platform.ComposeView
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:id="@+id/cv_home"
             android:layout_marginBottom="110dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/homeProgressBar" />
+            app:layout_constraintEnd_toEndOf="parent" />
         <!--<androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
