--- a/KamleonApp/app/src/main/res/layout/activity_privacy.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_privacy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color_activity"
-    tools:context=".activities.PrivacyActivity">
+    tools:context=".fragments.PrivacyFragment">
     <ImageButton
         android:layout_width="@dimen/nav_back_button_size"
         android:layout_height="@dimen/nav_back_button_size"
