--- a/KamleonApp/app/src/main/res/layout/activity_setting.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_setting.xml
@@ -61,13 +61,18 @@
                 android:layout_margin="10dp"
                 android:layout_gravity="center">
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/imageProfile"
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:src="@drawable/image_profile"
+                    android:id="@+id/iv_sett_profile"
+                    android:background="@color/transparent"
                     android:scaleType="centerCrop"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:shapeAppearanceOverlay="@style/roundedCorners"
-                    app:srcCompat="@drawable/image_profile" />
+                    android:layout_marginEnd="@dimen/nav_back_button_left"
+                    android:layout_marginTop="@dimen/nav_back_button_top"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
