--- a/KamleonApp/app/src/main/res/drawable/bg_activity_gradient.xml
+++ b/KamleonApp/app/src/main/res/drawable/bg_activity_gradient.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#88FAFAFA"
-        android:centerColor="#66FAFAFA"
-        android:endColor="#D5D5D5"
+        android:startColor="@color/color_fa"
+        android:centerColor="@color/color_fa"
+        android:endColor="@color/bg_analytics_gradient_2"
         android:angle="315" />
 </shape>
