--- a/KamleonApp/app/src/main/res/layout/activity_analytic.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_analytic.xml
@@ -32,7 +32,7 @@
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnNavProfile"
+            app:layout_constraintTop_toBottomOf="@id/iv_analytic_profile"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
@@ -83,7 +83,13 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/cv_analytic_volume"
                     app:analyticsType="volume"/>
-                <RelativeLayout
+
+                <com.dynatech2012.kamleonuserapp.views.cards.CardViewAnalyticsItemComposeView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/cv_analytic_empty"
+                    app:analyticsType="empty"/>
+                <!--<RelativeLayout
                     android:layout_width="180dp"
                     android:layout_height="140dp"
                     android:paddingHorizontal="20dp"
@@ -109,14 +115,15 @@
                         android:text="@string/add_metric"
                         android:textSize="@dimen/ts_14"/>
                 </RelativeLayout>
+                -->
             </LinearLayout>
 
         </ScrollView>
-        <com.google.android.material.imageview.ShapeableImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="58dp"
             android:layout_height="58dp"
-            app:srcCompat="@drawable/img_circle_profile"
-            android:id="@+id/btnNavProfile"
+            android:src="@drawable/img_circle_profile"
+            android:id="@+id/iv_analytic_profile"
             android:background="@color/transparent"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
