--- a/KamleonApp/app/src/main/res/layout/activity_graphics.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_graphics.xml
@@ -45,14 +45,18 @@
             android:textColor="@color/kamleon_secondary_grey_50"
             android:textSize="@dimen/ts_16" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="58dp"
+            android:layout_height="58dp"
             android:src="@drawable/img_circle_profile"
+            android:id="@+id/iv_graph_profile"
             android:background="@color/transparent"
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/roundedCorners"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"/>
+
     </RelativeLayout>
 
     <!--<androidx.recyclerview.widget.RecyclerView
