--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -71,6 +71,7 @@
 
     <color name="color_fa">#FFFAFAFA</color>
     <color name="color_fa_40">#66FAFAFA</color>
+    <color name="color_fa_80">#CCFAFAFA</color>
     <color name="color_red">#FC664E</color>
 
     <color name="color_secondary">#808285</color>
@@ -83,6 +84,9 @@
     <color name="gradient_5">#00CDD4</color>
     <color name="premium_gradient_1">#FFFFFF</color>
     <color name="premium_gradient_2">#4BD2C9</color>
+
+    <color name="bg_analytics_gradient_2">#CDCDCD</color>
+
 
     // Previews
 
