invitations and styles

--- a/KamleonApp/app/src/main/res/drawable/bg_tab_button_shadow.xml
+++ b/KamleonApp/app/src/main/res/drawable/bg_tab_button_shadow.xml
@@ -84,7 +84,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="@color/whiteEE" />
+            <solid android:color="@color/white93" />
 
             <corners android:radius="@dimen/setting_option_view_radius"/>
         </shape>
