--- a/KamleonApp/app/src/main/res/layout/activity_analytic.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_analytic.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".fragments.AnalyticFragment">
     <ImageView
         android:layout_width="0dp"
@@ -14,6 +14,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        tools:visibility="visible"
+        tools:text="Debug Text Style"
+        android:textAppearance="@style/TextAppearance.Kamleon.Headline6"
+        style="@style/TextStyle.Kamleon.Inverse"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -123,11 +136,9 @@
             android:layout_height="58dp"
             android:src="@drawable/img_circle_profile"
             android:id="@+id/iv_analytic_profile"
-            android:background="@color/transparent"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:shapeAppearanceOverlay="@style/roundedCorners"
             android:layout_marginEnd="@dimen/nav_back_button_left"
             android:layout_marginTop="@dimen/nav_back_button_top"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -205,9 +216,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/CircularMediumFont"
+                    style="@style/Circular.Medium"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/kamleon_dark_grey"
                     android:text="@string/tab_home"
                     android:textSize="@dimen/ts_12"/>
             </LinearLayout>
@@ -236,9 +246,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/CircularMediumFont"
+                    style="@style/Circular.Medium"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/black"
                     android:text="@string/tab_analytic"
                     android:textSize="@dimen/ts_12"/>
             </LinearLayout>
@@ -266,9 +275,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/CircularMediumFont"
                     android:layout_marginTop="8dp"
-                    android:textColor="@color/black"
                     android:text="@string/tab_qr"
                     android:textSize="@dimen/ts_12"/>
             </LinearLayout>
