--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 
-    <color name="whiteEE">#EEFFFFFF</color>
+    <color name="white93">#EEFFFFFF</color>
     <color name="white80">#CCFFFFFF</color>
     <color name="white40">#66FFFFFF</color>
     <color name="white30">#4DFFFFFF</color>
@@ -25,8 +25,8 @@
     <color name="kmln_graph_color_grey">#999999</color>
     <color name="kmln_graph_color_black">#000000</color>
     <color name="kmln_graph_color_white">#FFFFFF</color>
-    <color name="kmln_graph_color_orange">#ff5c55</color>
-    <color name="kmln_graph_color_disabled">#d1d3d4</color>
+    <color name="kmln_graph_color_orange">#FF5C55</color>
+    <color name="kmln_graph_color_disabled">#D1D3D4</color>
 
     <color name="kmln_greenShadow0">#9961DFD8</color>
     <color name="kmln_greenShadow1">#5561DFD8</color>
@@ -34,17 +34,18 @@
     <color name="kmln_greenShadow3">#1261DFD8</color>
     <color name="kmln_greenShadow4">#0861DFD8</color>
 
-    <color name="kamleon_blue">#FF2FD5CB</color>
+    <color name="kamleon_blue">#2FD5CB</color>
+    <color name="kamleon_blue_dark">#00A59B</color>
 
     <color name="kamleon_blue_pressed">#882FD5CB</color>
 
     <color name="kamleon_dark_grey">#FF221E1E</color>
     <color name="kamleon_dark_grey_50">#88221E1E</color>
 
-    <color name="kamleon_secondary_grey_70">#FF414042</color>
-    <color name="kamleon_secondary_grey_60">#FF808285</color>
-    <color name="kamleon_secondary_grey_50">#FFA7A9AC</color>
-    <color name="kamleon_secondary_grey_40">#FFD1D3D4</color>
+    <color name="kamleon_secondary_grey_70">#414042</color>
+    <color name="kamleon_secondary_grey_60">#808285</color>
+    <color name="kamleon_secondary_grey_50">#A7A9AC</color>
+    <color name="kamleon_secondary_grey_40">#D1D3D4</color>
 
     <color name="shadow_black_0">#01000000</color>
     <color name="shadow_black_1">#02000000</color>
@@ -69,7 +70,7 @@
 
     <color name="text_color_category">#424141</color>
 
-    <color name="color_fa">#FFFAFAFA</color>
+    <color name="color_fa">#FAFAFA</color>
     <color name="color_fa_40">#66FAFAFA</color>
     <color name="color_fa_80">#CCFAFAFA</color>
     <color name="color_red">#FC664E</color>
@@ -88,6 +89,10 @@
     <color name="bg_analytics_gradient_2">#CDCDCD</color>
 
 
-    // Previews
+<!-- Debug -->
+    <color name="debug_red">#E91E63</color>
+    <color name="debug_blue">#3F51B5</color>
+    <color name="debug_green">#4CAF50</color>
+    <color name="debug_yellow">#FFC107</color>
 
 </resources>
